--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,29 @@
 <% provide :title, 'Sign Up' %>
 <h1>Sign Up</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+
+<div class="row">
+  <div class="span6 offset3">
+
+    <%= form_for(@user) do |f| %>
+      <%= render "shared/error_messages" %>
+      <%= f.label :name %>
+      <%= f.text_field :name, class: "span6" %>
+
+      <%= f.label :email %>
+      <%= f.text_field :email, class: "span6" %>
+
+      <%= f.label :password %>
+      <%= f.password_field :password, class: "span6" %>
+
+      <%= f.label :password_confirmation, "Confirmation" %>
+      <%= f.password_field :password_confirmation, class: "span6" %>
+
+      <div class="form-actions">
+
+        <%= f.submit "Create my account", class: "btn btn-large btn-primary" %>
+      </div>
+
+    <% end -%>
+
+  </div>
+</div>
