--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,10 +1,10 @@
-<% if @user.errors.any? %>
+<% if object.errors.any? %>
 
   <div class="alert alert-error">
-    <strong>The form contains <%= pluralize(@user.errors.count, "error") %></strong>
+    <strong>The form contains <%= pluralize(object.errors.count, "error") %></strong>
 
     <ul>
-      <% @user.errors.full_messages.each do |msg| %>
+      <% object.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
       <% end -%>
     </ul>
